src/styles/Foods.css
.addFood {
  margin-left: 5rem;
  border: 1px solid;
  padding: 0.5em 1em;
}

.container {
  padding: 1rem;
  margin: 2rem;
  font-size: 1.3em;
  justify-content: center;
}

.foodTitle {
  display: flex;
  justify-content: space-between;
  margin: 1rem;
  width: 50vw;
}

.box {
  display: flex;
  justify-content: space-between;
  border: 1px solid;
  padding: 1rem;
  margin: 1rem;
  width: 50vw;
}

.left-items {
  display: flex;
}

.catColor {
  height: 30px;
  width: 30px;
  border: 1px solid;
  margin-right: 1em;
}

.actionsBtn {
  display: flex;
  gap: 1rem;
  align-items: center;
}

.actionBtn span {
  margin-right: 0.5em;
}

.fa-trash-can {
  cursor: pointer;
}

.filters {
  display: flex;
  gap: 0.2em;
  padding: 0.5rem;
  margin: 0 0.5rem;
  flex-wrap: wrap;
  width: 60vw;
}

.filterBtn,
.allFoodBtn {
  margin: 0.2rem;
  padding: 0 0.5rem;
}

/* One Food Form Styling */

form {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-content: center;
  align-items: center;
  margin-top: 2rem;
}

.form-group {
  margin: 1rem;
  font-size: 1.3em;
}

.form-control {
  width: 47vw;
}

.createAFoodBtn,
.editFoodFormBtn {
  padding: 0 1em;
  font-size: 1.3em;
}

/* One Food Styling */

.nameWrapper {
  display: flex;
  gap: 0.5rem;
  padding: 1rem;
  margin: 1rem;
  width: 33vw;
  justify-content: space-between;
}

.lead {
  font-size: 2rem;
}

.nameLeft {
  display: flex;
  gap: 0.5rem;
}

.categoryWrapper {
  display: flex;
  justify-content: space-between;
  padding: 1rem;
  margin: 1rem;
  width: 33vw;
}

.categoryLeft {
  display: flex;
  gap: 0.5rem;
}

.descriptionWrapper {
  margin: 1rem;
  padding: 1rem;
  width: 33vw;
}

@media (max-width: 1242px) {
  .box {
    width: 100%;
  }

  .foodTitle {
    width: 100%;
  }

  .filters {
    width: auto;
  }
}

@media (max-width: 524px) {
  .addFood {
    border: none;
  }
}

